[gd_scene load_steps=18 format=2]

[ext_resource path="res://nodes/trigger_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/shrine.png" type="Texture" id=2]
[ext_resource path="res://Shrine.gd" type="Script" id=3]
[ext_resource path="res://audio/shrine.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/shrine break.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=8]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 4200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=9]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 4800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=10]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 5400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=2]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 1800, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 2400, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 3000, 0, 600, 600 )

[sub_resource type="AtlasTexture" id=7]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 3600, 0, 600, 600 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "broken",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "break",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.39453, 1.16805, 0.354686 )

[node name="Shrine" type="Spatial"]
script = ExtResource( 3 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.0946975, 0 )
billboard = 2
frames = SubResource( 11 )
playing = true

[node name="trigger_area" parent="." instance=ExtResource( 1 )]
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="trigger_area"]
shape = SubResource( 12 )

[node name="OmniLight" type="OmniLight" parent="."]
shadow_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="HealSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 5.0

[node name="BreakSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="player_entered" from="trigger_area" to="." method="_on_trigger_area_player_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="trigger_area"]
